[package]
name = "kiln"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.1", features = ["serde"] }
rfd = { version = "0.15.3", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs"]}
vintage_story_mod_api = "0.1.1"
