[package]
name = "kiln"
version = "0.1.0"
edition = "2024"

[dependencies]
directories-next = "2.0.0"
reqwest = "0.12.20"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
vintagestory_mod_db_api = {path = "../vintagestory_mod_db_api"}
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
rfd = { version = "0.15.3" }
rmp-serde = "1.3.0"
zstd = "0.13.3"
